fix: overflow-y

--- a/src/propertySelector/scss/propertySelector.scss
+++ b/src/propertySelector/scss/propertySelector.scss
@@ -21,7 +21,7 @@
 
     .property-list-container {
         flex: 0 1 100%;
-        overflow: scroll;
+        overflow-y: scroll;
         border-bottom: 1px solid #dddfe2;
         padding: 0.5rem 0;
 
